--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "blurhash": "^2.0.4",
     "bootstrap": "^5.3.0-alpha1",
     "moment": "^2.29.4",
