--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.57.1",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4",
