--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-redux": "^8.0.5",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "sass": "^1.57.1",
     "unsplash-js": "^7.0.15",
